@@ -29,10 +29,6 @@
 
 package cc.arduino.view.preferences;
 
-import com.google.common.base.Function;
-import com.google.common.base.Joiner;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import processing.app.Base;
 
 import java.awt.*;
@@ -41,8 +37,9 @@ import java.awt.event.ActionListener;
 import java.awt.event.WindowEvent;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
-import static processing.app.I18n._;
+import static processing.app.I18n.tr;
 
 public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
 
@@ -53,13 +50,7 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
     initComponents();
     setLocationRelativeTo(parent);
 
-    Base.registerWindowCloseKeys(getRootPane(), new ActionListener() {
-      @Override
-      public void actionPerformed(ActionEvent e) {
-        cancelActionPerformed(e);
-      }
-    });
-
+    Base.registerWindowCloseKeys(getRootPane(), this::cancelActionPerformed);
   }
 
   /**
@@ -75,9 +66,10 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
     javax.swing.JButton cancel = new javax.swing.JButton();
     javax.swing.JButton ok = new javax.swing.JButton();
     javax.swing.JLabel jLabel1 = new javax.swing.JLabel();
+    unofficialListURLLabel = new javax.swing.JLabel();
 
     setDefaultCloseOperation(javax.swing.WindowConstants.DISPOSE_ON_CLOSE);
-    setTitle(_("Additional Boards Manager URLs"));
+    setTitle(tr("Additional Boards Manager URLs"));
     setModal(true);
     setModalExclusionType(java.awt.Dialog.ModalExclusionType.APPLICATION_EXCLUDE);
 
@@ -86,21 +78,37 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
     additionalBoardsManagerURLs.setName(""); // NOI18N
     jScrollPane1.setViewportView(additionalBoardsManagerURLs);
 
-    cancel.setText(_("Cancel"));
+    cancel.setText(tr("Cancel"));
     cancel.addActionListener(new java.awt.event.ActionListener() {
       public void actionPerformed(java.awt.event.ActionEvent evt) {
         cancelActionPerformed(evt);
       }
     });
 
-    ok.setText(_("OK"));
+    ok.setText(tr("OK"));
     ok.addActionListener(new java.awt.event.ActionListener() {
       public void actionPerformed(java.awt.event.ActionEvent evt) {
         okActionPerformed(evt);
       }
     });
 
-    jLabel1.setText(_("Enter additional URLs, one for each row"));
+    jLabel1.setText(tr("Enter additional URLs, one for each row"));
+
+    unofficialListURLLabel.setText(tr("Click for a list of unofficial boards support URLs"));
+    unofficialListURLLabel.setCursor(new java.awt.Cursor(java.awt.Cursor.HAND_CURSOR));
+    unofficialListURLLabel.addMouseListener(new java.awt.event.MouseAdapter() {
+      public void mouseClicked(java.awt.event.MouseEvent evt) {
+        unofficialListURLLabelMouseClicked(evt);
+      }
+
+      public void mouseExited(java.awt.event.MouseEvent evt) {
+        unofficialListURLLabelMouseExited(evt);
+      }
+
+      public void mouseEntered(java.awt.event.MouseEvent evt) {
+        unofficialListURLLabelMouseEntered(evt);
+      }
+    });
 
     javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
     getContentPane().setLayout(layout);
@@ -109,14 +117,16 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
         .addGroup(layout.createSequentialGroup()
           .addContainerGap()
           .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(layout.createSequentialGroup()
-              .addGap(0, 332, Short.MAX_VALUE)
+            .addComponent(jScrollPane1, javax.swing.GroupLayout.DEFAULT_SIZE, 538, Short.MAX_VALUE)
+            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
+              .addGap(0, 0, Short.MAX_VALUE)
               .addComponent(ok)
-              .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+              .addGap(7, 7, 7)
               .addComponent(cancel))
-            .addComponent(jScrollPane1)
             .addGroup(layout.createSequentialGroup()
-              .addComponent(jLabel1)
+              .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addComponent(unofficialListURLLabel)
+                .addComponent(jLabel1))
               .addGap(0, 0, Short.MAX_VALUE)))
           .addContainerGap())
     );
@@ -126,11 +136,13 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
           .addContainerGap()
           .addComponent(jLabel1)
           .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-          .addComponent(jScrollPane1, javax.swing.GroupLayout.DEFAULT_SIZE, 118, Short.MAX_VALUE)
+          .addComponent(jScrollPane1)
+          .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+          .addComponent(unofficialListURLLabel)
           .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
           .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
-            .addComponent(cancel)
-            .addComponent(ok))
+            .addComponent(ok)
+            .addComponent(cancel))
           .addContainerGap())
     );
 
@@ -147,33 +159,36 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
     cancelActionPerformed(evt);
   }//GEN-LAST:event_okActionPerformed
 
+  private void unofficialListURLLabelMouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_unofficialListURLLabelMouseEntered
+    unofficialListURLLabel.setForeground(new Color(0, 0, 140));
+  }//GEN-LAST:event_unofficialListURLLabelMouseEntered
+
+  private void unofficialListURLLabelMouseExited(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_unofficialListURLLabelMouseExited
+    unofficialListURLLabel.setForeground(new Color(76, 76, 76));
+  }//GEN-LAST:event_unofficialListURLLabelMouseExited
+
+  private void unofficialListURLLabelMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_unofficialListURLLabelMouseClicked
+    Base.openURL("https://github.com/arduino/Arduino/wiki/Unofficial-list-of-3rd-party-boards-support-urls");
+  }//GEN-LAST:event_unofficialListURLLabelMouseClicked
+
   public void setText(String text) {
     Collection<String> urls = splitAndTrim(text, ",");
-    additionalBoardsManagerURLs.setText(Joiner.on("\n").skipNulls().join(urls));
+    additionalBoardsManagerURLs.setText(urls.stream().filter(s -> s != null).collect(Collectors.joining("\n")));
   }
 
   private Collection<String> splitAndTrim(String text, String separator) {
     Collection<String> urls = Arrays.asList(text.split(separator));
-    return FluentIterable.from(urls).transform(new Function<String, String>() {
-      @Override
-      public String apply(String input) {
-        return input.trim();
-      }
-    }).filter(new Predicate<String>() {
-      @Override
-      public boolean apply(String input) {
-        return !input.isEmpty();
-      }
-    }).toList();
+    return urls.stream().map(String::trim).filter(url -> !url.isEmpty()).collect(Collectors.toList());
   }
 
   public String getText() {
     Collection<String> urls = splitAndTrim(additionalBoardsManagerURLs.getText(), "\n");
-    return Joiner.on(",").skipNulls().join(urls);
+    return urls.stream().filter(s -> s != null).collect(Collectors.joining(","));
   }
 
   // Variables declaration - do not modify//GEN-BEGIN:variables
   private final javax.swing.JTextArea additionalBoardsManagerURLs = new javax.swing.JTextArea();
+  private javax.swing.JLabel unofficialListURLLabel;
   // End of variables declaration//GEN-END:variables
 
   public void onOk(ActionListener listener) {
